--- a/options/index.html
+++ b/options/index.html
@@ -10,10 +10,12 @@
     <div id="app">
       <header>
         <h3>Platzi Commerce</h3>
-        <button class="cart">Carro ({{Cart.quantity}})</button>
-        <cart-content v-for="p in Cart.products" :product="p"></cart-content>
+        <button class="cart" v-on:click="ToggleCart">Carro ({{Cart.quantity}})</button>
+        <div v-show="Cart.Visibility" class="cart-content">
+          <cart-item v-for="p in Cart.products" :product="p"></cart-item>
+        </div>
       </header>
-      <product-manager></product-manager>
+      <product-manager v-on:send-to-cart="handleSendToCart"></product-manager>
     </div>
     <!-- Import vue-->
     <script src="https://unpkg.com/vue@next"></script>
@@ -27,7 +29,6 @@
     <script>
       app.mount("#app")
     </script>
-
 
   </body>
 </html>
